Apply fix for parallax overflowing see #106 (#107)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,6 +51,8 @@
 	left: 0;
 	object-fit: cover;
 
+	pointer-events: none;
+
 	.scrolling-effect-static & {
 		position: static;
 	}
